# ModelDownloader

./: README.md  pyproject.toml
src/model_downloader_pkg/: main.py
src/universal_model_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
